[gd_scene load_steps=31 format=3 uid="uid://c4xegeqjx0ug1"]

[ext_resource type="Script" path="res://scripts/TurnIndicator.gd" id="1_8xq31"]
[ext_resource type="Script" path="res://scripts/gameScreen.gd" id="1_asor6"]
[ext_resource type="Theme" uid="uid://c8neot36y0s3q" path="res://styles/main_theme.tres" id="2_lvhuy"]
[ext_resource type="Texture2D" uid="uid://cb8jonw7xy0v1" path="res://textures/shapes/Circle.png" id="2_u4gtu"]
[ext_resource type="Texture2D" uid="uid://bcqquyqgc8fx5" path="res://textures/GUI/back.png" id="3_2tce6"]
[ext_resource type="Texture2D" uid="uid://cxb4qakn53ki8" path="res://textures/GUI/field9.png" id="3_5a4x2"]
[ext_resource type="Script" path="res://scripts/GameField.gd" id="4_dlry0"]
[ext_resource type="Texture2D" uid="uid://dg60n2j684o7p" path="res://textures/GUI/field3.png" id="5_wpw8f"]
[ext_resource type="Script" path="res://scripts/MinimapGrid.gd" id="6_3eins"]
[ext_resource type="Shader" path="res://shaders/field_shader.gdshader" id="6_wvcol"]
[ext_resource type="Script" path="res://scripts/MainGrid.gd" id="7_7ailk"]
[ext_resource type="StyleBox" uid="uid://uaicsutng4rx" path="res://styles/texture_button.tres" id="8_58nnt"]
[ext_resource type="FontFile" uid="uid://dl2jle6i6l7qr" path="res://fonts/UbuntuMono-Bold.ttf" id="12_6rcur"]
[ext_resource type="Texture2D" uid="uid://c47v8b1ta4u8p" path="res://textures/shapes/Try.png" id="13_kar0g"]
[ext_resource type="Texture2D" uid="uid://dy5ega2xmsl5m" path="res://textures/GUI/watch_button.png" id="14_nmjgu"]
[ext_resource type="AudioStream" uid="uid://bd6342i323qsi" path="res://sounds/click.wav" id="16_bts7l"]
[ext_resource type="AudioStream" uid="uid://brmk62yitai0n" path="res://sounds/turn.mp3" id="17_rv7gt"]
[ext_resource type="AudioStream" uid="uid://bb0wdjwmhyqoo" path="res://sounds/win.mp3" id="18_fwjku"]

[sub_resource type="Gradient" id="Gradient_salpj"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_30fw5"]
gradient = SubResource("Gradient_salpj")
fill_to = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_055sr"]
shader = ExtResource("6_wvcol")
shader_parameter/dissolve_state = 1.1
shader_parameter/alpha_divider = 1.0
shader_parameter/fill_color = Vector3(255, 255, 255)
shader_parameter/dissolve_pattern = SubResource("GradientTexture2D_30fw5")

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hl5s1"]
gradient = SubResource("Gradient_salpj")
fill_from = Vector2(1, 1)
fill_to = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rgp6o"]
shader = ExtResource("6_wvcol")
shader_parameter/dissolve_state = 1.01
shader_parameter/alpha_divider = 2.0
shader_parameter/fill_color = Vector3(255, 255, 255)
shader_parameter/dissolve_pattern = SubResource("GradientTexture2D_hl5s1")

[sub_resource type="Animation" id="Animation_pt84i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PortContainer/SettingsButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PortContainer/MarginContainer/TurnIndicator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PortContainer/Game:material:shader_parameter/dissolve_state")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PortContainer/Game/9Texture:material:shader_parameter/dissolve_state")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.01]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WinAudio:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/WinnerPage:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/WinnerPage:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lsnvg"]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PortContainer/SettingsButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PortContainer/MarginContainer/TurnIndicator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PortContainer/Game:material:shader_parameter/dissolve_state")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.1, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PortContainer/Game/9Texture:material:shader_parameter/dissolve_state")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.01, 0.0]
}

[sub_resource type="Animation" id="Animation_jgyol"]
resource_name = "close_from_winner"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PortContainer/SettingsButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(3, 3),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PortContainer/MarginContainer/TurnIndicator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(3, 3),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PortContainer/Game:material:shader_parameter/dissolve_state")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PortContainer/Game/9Texture:material:shader_parameter/dissolve_state")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.01]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PortContainer/Game/MainGrid")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"exit"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioStreamPlayer:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PortContainer/Game/MinimapGrid")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"exit"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/WinnerPage:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer/WinnerPage:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "method"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_go_main_menu"
}]
}

[sub_resource type="Animation" id="Animation_xh55w"]
resource_name = "close_winner"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/WinnerPage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3, 3),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/WinnerPage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_h21uu"]
resource_name = "disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PortContainer/SettingsButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 3),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PortContainer/MarginContainer/TurnIndicator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 3),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PortContainer/Game:material:shader_parameter/dissolve_state")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PortContainer/Game/9Texture:material:shader_parameter/dissolve_state")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.01]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PortContainer/Game/MainGrid")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"exit"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioStreamPlayer:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PortContainer/Game/MinimapGrid")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"exit"
}]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_go_main_menu"
}]
}

[sub_resource type="Animation" id="Animation_727p8"]
resource_name = "open_winner"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WinAudio:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/WinnerPage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/WinnerPage:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grbr8"]
_data = {
"RESET": SubResource("Animation_pt84i"),
"appear": SubResource("Animation_lsnvg"),
"close_from_winner": SubResource("Animation_jgyol"),
"close_winner": SubResource("Animation_xh55w"),
"disappear": SubResource("Animation_h21uu"),
"open_winner": SubResource("Animation_727p8")
}

[node name="gameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_asor6")

[node name="PortContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="SettingsButton" type="Button" parent="PortContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_lvhuy")
theme_override_constants/icon_max_width = 100
icon = ExtResource("3_2tce6")
flat = true
icon_alignment = 1
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="PortContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 10

[node name="TurnIndicator" type="HBoxContainer" parent="PortContainer/MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("1_8xq31")

[node name="TextureRect" type="TextureRect" parent="PortContainer/MarginContainer/TurnIndicator"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_u4gtu")
expand_mode = 5
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="PortContainer/MarginContainer/TurnIndicator"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_u4gtu")
expand_mode = 5
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="PortContainer/MarginContainer/TurnIndicator"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_u4gtu")
expand_mode = 5
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="PortContainer/MarginContainer/TurnIndicator"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_u4gtu")
expand_mode = 5
stretch_mode = 5

[node name="Game" type="TextureRect" parent="PortContainer" node_paths=PackedStringArray("indicator", "minimap", "field")]
unique_name_in_owner = true
z_index = 1
y_sort_enabled = true
material = SubResource("ShaderMaterial_055sr")
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("3_5a4x2")
expand_mode = 5
stretch_mode = 5
script = ExtResource("4_dlry0")
indicator = NodePath("../MarginContainer/TurnIndicator")
minimap = NodePath("MinimapGrid")
field = NodePath("MainGrid")

[node name="9Texture" type="TextureRect" parent="PortContainer/Game"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.509804)
material = SubResource("ShaderMaterial_rgp6o")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_wpw8f")
expand_mode = 5
stretch_mode = 5

[node name="MinimapGrid" type="GridContainer" parent="PortContainer/Game"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.52549)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3
script = ExtResource("6_3eins")

[node name="MarginContainer" type="MarginContainer" parent="PortContainer/Game/MinimapGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="0" type="TextureRect" parent="PortContainer/Game/MinimapGrid/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 4
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="PortContainer/Game/MinimapGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="0" type="TextureRect" parent="PortContainer/Game/MinimapGrid/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 4
stretch_mode = 5

[node name="MarginContainer3" type="MarginContainer" parent="PortContainer/Game/MinimapGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="0" type="TextureRect" parent="PortContainer/Game/MinimapGrid/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 4
stretch_mode = 5

[node name="MarginContainer4" type="MarginContainer" parent="PortContainer/Game/MinimapGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="0" type="TextureRect" parent="PortContainer/Game/MinimapGrid/MarginContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 4
stretch_mode = 5

[node name="MarginContainer5" type="MarginContainer" parent="PortContainer/Game/MinimapGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="0" type="TextureRect" parent="PortContainer/Game/MinimapGrid/MarginContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 4
stretch_mode = 5

[node name="MarginContainer6" type="MarginContainer" parent="PortContainer/Game/MinimapGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="0" type="TextureRect" parent="PortContainer/Game/MinimapGrid/MarginContainer6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 4
stretch_mode = 5

[node name="MarginContainer7" type="MarginContainer" parent="PortContainer/Game/MinimapGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="0" type="TextureRect" parent="PortContainer/Game/MinimapGrid/MarginContainer7"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 4
stretch_mode = 5

[node name="MarginContainer8" type="MarginContainer" parent="PortContainer/Game/MinimapGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="0" type="TextureRect" parent="PortContainer/Game/MinimapGrid/MarginContainer8"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 4
stretch_mode = 5

[node name="MarginContainer9" type="MarginContainer" parent="PortContainer/Game/MinimapGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="0" type="TextureRect" parent="PortContainer/Game/MinimapGrid/MarginContainer9"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 4
stretch_mode = 5

[node name="MainGrid" type="GridContainer" parent="PortContainer/Game"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 9
script = ExtResource("7_7ailk")

[node name="Button" type="Button" parent="PortContainer/Game/MainGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_styles/focus = ExtResource("8_58nnt")
theme_override_styles/disabled = ExtResource("8_58nnt")
theme_override_styles/hover = ExtResource("8_58nnt")
theme_override_styles/pressed = ExtResource("8_58nnt")
theme_override_styles/normal = ExtResource("8_58nnt")
toggle_mode = true
icon = ExtResource("2_u4gtu")
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="PortContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WinnerPage" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/WinnerPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="WinnerLabel" type="Label" parent="CanvasLayer/WinnerPage/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_lvhuy")
theme_override_fonts/font = ExtResource("12_6rcur")
theme_override_font_sizes/font_size = 64
text = "Winner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinnerTexture" type="TextureRect" parent="CanvasLayer/WinnerPage/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
texture = ExtResource("13_kar0g")
expand_mode = 5
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/WinnerPage/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MMButton" type="Button" parent="CanvasLayer/WinnerPage/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_lvhuy")
theme_override_constants/icon_max_width = 100
icon = ExtResource("3_2tce6")
icon_alignment = 1
expand_icon = true

[node name="WatchButton" type="Button" parent="CanvasLayer/WinnerPage/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_lvhuy")
theme_override_constants/icon_max_width = 100
icon = ExtResource("14_nmjgu")
icon_alignment = 1
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_grbr8")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_bts7l")

[node name="TurnAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("17_rv7gt")

[node name="WinAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_fwjku")

[connection signal="pressed" from="PortContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/WinnerPage/VBoxContainer/HBoxContainer/MMButton" to="." method="_on_mm_button_pressed"]
[connection signal="pressed" from="CanvasLayer/WinnerPage/VBoxContainer/HBoxContainer/WatchButton" to="." method="_on_watch_button_pressed"]
